リポジトリを作成。データがロードされるようにした

--- a/spring-fast-startup/src/main/resources/application.yml
+++ b/spring-fast-startup/src/main/resources/application.yml
@@ -1,20 +1,22 @@
 
-
-
----
 spring:
-  profiles: development
   datasource:
     driverClassName: org.h2.Driver
     #メモリDB
-    url: jdbc:h2:file:~/hajibootdb;AUTO_SERVER=true
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
     #ファイルDB
-    #url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+    #url: jdbc:h2:file:~/hajibootdb;AUTO_SERVER=true
+    
     username: sa
     password: 
   jpa:
     hibernate.ddl-auto: validate #変更を保管
     #hibernate.ddl-auto: create-drop #毎回リフレッシュ
+
+---
+spring:
+  profiles: development
+
 ---
 spring:
     profiles: test
