--- a/spring-fast-startup/build.gradle
+++ b/spring-fast-startup/build.gradle
@@ -28,8 +28,13 @@ dependencies {
     
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-test")
     compile("org.springframework.boot:spring-boot-devtools")
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    compile 'org.springframework.boot:spring-boot-starter-security'
+    
+    
     compile 'org.projectlombok:maven-lombok-plugin:0.9.3.1'
     compile "org.projectlombok:lombok:1.16.2"
     compile 'org.postgresql:postgresql:9.4-1201-jdbc41'
@@ -38,16 +43,14 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-maven-plugin:1.2.3.RELEASE'
     compile 'org.webjars:bootstrap:3.2.0'
     compile 'org.flywaydb:flyway-core'
-    compile 'org.springframework.boot:spring-boot-starter-security'
-    
+
     compile 'javax.servlet:jstl:1.2'
     compile "org.codehaus.groovy:groovy-all:2.3.11"
     compile 'org.hudsonci.plugins:dry:2.28'
 
     compile 'com.fasterxml.jackson.core:jackson-databind'
+    compile 'javax.servlet:jstl'
     
-    compile 'org.apache.spark:spark-core_2.11:2.2.0'	
-	compile group: 'org.apache.spark', name: 'spark-sql_2.10', version: '2.2.0'
 	
     testCompile("junit:junit")
 }
