--- a/spring-fast-startup/src/main/resources/application.yml
+++ b/spring-fast-startup/src/main/resources/application.yml
@@ -32,12 +32,7 @@ spring:
 
 ---
 
-
-spring.thymeleaf.cache: false
-spring.view.prefix: /WEB-INF/jsp/
-spring.view.suffix: .jsp
-spring.thymeleaf.prefix: classpath:/thymeleaf/
-spring.thymeleaf.suffix:
-spring.thymeleaf.viewNames: '*.html,*.xhtml'
-
+spring:
+  thymeleaf.cache: false
 security.basic.enabled: false
+
