--- a/spring-fast-startup/build.gradle
+++ b/spring-fast-startup/build.gradle
@@ -50,7 +50,15 @@ dependencies {
 
     compile 'com.fasterxml.jackson.core:jackson-databind'
     compile 'javax.servlet:jstl'
+    compile "org.codehaus.groovy:groovy-all:2.3.11"
+    compile 'org.springframework:spring-test:4.1.7.RELEASE'
+
     
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+
+    testCompile("junit:junit")
+    testCompile 'org.spockframework:spock-core:1.0-groovy-2.3'
+    testCompile 'org.spockframework:spock-spring:1.0-groovy-2.3'
 	
     testCompile("junit:junit")
 }
