--- a/spring-fast-startup/build.gradle
+++ b/spring-fast-startup/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind'
     compile 'javax.servlet:jstl'
     compile "org.codehaus.groovy:groovy-all:2.3.11"
-    compile 'org.springframework:spring-test:4.1.7.RELEASE'
+    compile 'org.springframework:spring-test'
 
     
     testCompile("org.springframework.boot:spring-boot-starter-test")
