--- a/spring-fast-startup/build.gradle
+++ b/spring-fast-startup/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-test")
+  
     compile("org.springframework.boot:spring-boot-devtools")
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
@@ -45,21 +46,33 @@ dependencies {
     compile 'org.flywaydb:flyway-core'
 
     compile 'javax.servlet:jstl:1.2'
-    compile "org.codehaus.groovy:groovy-all:2.3.11"
     compile 'org.hudsonci.plugins:dry:2.28'
 
     compile 'com.fasterxml.jackson.core:jackson-databind'
     compile 'javax.servlet:jstl'
-    compile "org.codehaus.groovy:groovy-all:2.3.11"
-    compile 'org.springframework:spring-test:4.1.7.RELEASE'
+    
+    testCompile 'org.springframework:spring-test'
 
+    //testCompile "org.codehaus.groovy:groovy-all:2.4"
+    
+    testCompile "com.h2database:h2"
+    testCompile "org.springframework.batch:spring-batch-test"
+    testCompile("junit:junit")
     
     testCompile("org.springframework.boot:spring-boot-starter-test")
-
-    testCompile("junit:junit")
-    testCompile 'org.spockframework:spock-core:1.0-groovy-2.3'
-    testCompile 'org.spockframework:spock-spring:1.0-groovy-2.3'
-	
+    testCompile "cglib:cglib-nodep:3.2.5"
+    testCompile "org.codehaus.groovy:groovy"
+    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+    testCompile 'org.spockframework:spock-spring:1.0-groovy-2.4'
+    testCompile "javax.el:javax.el-api:3.0.0"
+    
+//    testCompile "org.codehaus.groovy:groovy"
+//    testCompile "org.springframework.boot:spring-boot-starter-test"
+//    testCompile "org.spockframework:spock-spring:${spockVersion}"
+//    testCompile "org.spockframework:spock-core:${spockVersion}"
+//    testCompile "cglib:cglib-nodep:${cglibVersion}"
+//    testCompile "javax.el:javax.el-api:$elVersion"
+    
     testCompile("junit:junit")
 }
 
