--- a/spring-fast-startup/build.gradle
+++ b/spring-fast-startup/build.gradle
@@ -53,7 +53,6 @@ dependencies {
     
     testCompile 'org.springframework:spring-test'
 
-    //testCompile "org.codehaus.groovy:groovy-all:2.4"
     
     testCompile "com.h2database:h2"
     testCompile "org.springframework.batch:spring-batch-test"
@@ -62,16 +61,21 @@ dependencies {
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile "cglib:cglib-nodep:3.2.5"
     testCompile "org.codehaus.groovy:groovy"
-    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
-    testCompile 'org.spockframework:spock-spring:1.0-groovy-2.4'
+    testCompile 'org.spockframework:spock-spring:1.1-groovy-2.4'
     testCompile "javax.el:javax.el-api:3.0.0"
     
-//    testCompile "org.codehaus.groovy:groovy"
-//    testCompile "org.springframework.boot:spring-boot-starter-test"
-//    testCompile "org.spockframework:spock-spring:${spockVersion}"
-//    testCompile "org.spockframework:spock-core:${spockVersion}"
-//    testCompile "cglib:cglib-nodep:${cglibVersion}"
-//    testCompile "javax.el:javax.el-api:$elVersion"
+  // mandatory dependencies for using Spock
+  compile "org.codehaus.groovy:groovy-all:2.4.10"
+  testCompile "org.spockframework:spock-core:1.1-groovy-2.4"
+
+  // optional dependencies for using Spock
+  testCompile "org.hamcrest:hamcrest-core:1.3" // only necessary if Hamcrest matchers are used
+  testRuntime "net.bytebuddy:byte-buddy:1.6.5"          // allows mocking of classes (in addition to interfaces)
+  testRuntime "org.objenesis:objenesis:2.5.1"    // allows mocking of classes without default constructor (together with CGLIB)
+
+  // dependencies used by examples in this project
+  testRuntime "com.h2database:h2:1.4.182"
+
     
     testCompile("junit:junit")
 }
