--- a/first-nodejs-app/.vscode/launch.json
+++ b/first-nodejs-app/.vscode/launch.json
@@ -4,11 +4,12 @@
     // 詳細情報は次を確認してください: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/myfirst.js"
+            "program": "${workspaceFolder}/firstWebApp.js"
         }
        
     ]
